--- a/001base/index.html
+++ b/001base/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+        body
+        {
+         background-image:url(./images/0.jpg);
+            background-size:100% 100%;
+            height:100%;
+            margin:0px;
+        }
+        html{
+         height:100%;   
+        }
 </head>
 <body>
     <img src="./images/jksafe.jpg"/>
